pyquest/tests/semantic_analysis/valid/test016.ql
// Compatible types for and operation
form testForm {
	"First Question"
	someIdentifier : boolean = True && False
}