pyquest/tests/semantic_analysis/invalid/test016.ql
// Incompatible types for and operation
form testForm {
	"First Question"
	someIdentifier : boolean = 10.0 && True
}